--- a/src/app/features/my-skills/components/my-skills-summary/my-skills-summary.component.html
+++ b/src/app/features/my-skills/components/my-skills-summary/my-skills-summary.component.html
@@ -1,9 +1,6 @@
 <article class="mb-5">
-  <dl class="my-skills-summary__group html">
-    <dt class="my-skills-summary__label">HTML</dt>
-    <dd class="my-skills-summary__item">XHTML</dd>
-    <dd class="my-skills-summary__item">HTML5</dd>
-    <dd class="my-skills-summary__item">Semantic Markup</dd>
-    <dd class="my-skills-summary__item">Jade template engine</dd>
+  <dl *ngFor="let i of groups" class="my-skills-summary__group {{ i.label }}">
+    <dt class="my-skills-summary__label">{{ i.label }}</dt>
+    <dd *ngFor="let skill of i.skills" class="my-skills-summary__item">{{ skill }}</dd>
   </dl>
 </article>
