--- a/src/app/features/my-skills/components/my-skills-summary/my-skills-summary.component.scss
+++ b/src/app/features/my-skills/components/my-skills-summary/my-skills-summary.component.scss
@@ -31,7 +31,7 @@
 }
 
 .my-skills-summary__group:hover,
-.my-skills-summary__group.active {
+.my-skills-summary__active-group {
   cursor: pointer;
   background: $secondary-color;
 }
