added wip skills details component

--- a/src/app/features/my-skills/pages/my-skills-page/my-skills-page.component.html
+++ b/src/app/features/my-skills/pages/my-skills-page/my-skills-page.component.html
@@ -8,6 +8,7 @@
       </p>
 
       <app-my-skills-summary></app-my-skills-summary>
+      <app-my-skills-details></app-my-skills-details>
     </div>
   </div>
 </div>
