--- a/src/app/features/my-skills/components/my-skills-summary/my-skills-summary.component.html
+++ b/src/app/features/my-skills/components/my-skills-summary/my-skills-summary.component.html
@@ -1,4 +1,4 @@
-<article class="mb-5">
+<article class="mb-5 clearfix">
   <dl
     *ngFor="let group of groups"
     class="my-skills-summary__group"
