set active skill group observable and display in ui using async pipe

--- a/src/app/features/my-skills/components/my-skills-details/my-skills-details.component.html
+++ b/src/app/features/my-skills/components/my-skills-details/my-skills-details.component.html
@@ -1,1 +1,8 @@
-<p>my-skills-details works!</p>
+<article *ngIf="activeGroup$ | async as group">
+  <div class="my-skills-details__group">
+    <h2>{{ group.label }}</h2>
+    <div *ngFor="let i of group.skills" class="my-skills-details__chart" [attr.data-percent]="i.rating">
+      <span class="my-skills-details__name">{{ i.name }}</span>
+    </div>
+  </div>
+</article>
