--- a/src/app/features/my-skills/components/my-skills-summary/my-skills-summary.component.scss
+++ b/src/app/features/my-skills/components/my-skills-summary/my-skills-summary.component.scss
@@ -14,6 +14,7 @@
 .my-skills-summary__label {
   display: block;
   margin-bottom: 0.5rem;
+  text-shadow: 0.1rem 0.1rem 0 $white;
   @include trajanProFont();
 }
 
