--- a/src/app/features/portfolio/pages/portfolio-page/portfolio-page.component.html
+++ b/src/app/features/portfolio/pages/portfolio-page/portfolio-page.component.html
@@ -1,1 +1,12 @@
-<p>portfolio-page works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1>PORTFOLIO - <span class="text-tertiary">PROJECTS</span> I'VE <span class="text-tertiary">WORKED</span> ON</h1>
+      <p>
+        Welcome to my online portfolio. Here you will find a collection of some of the work I have undertaken on a
+        variety of different projects.
+      </p>
+      <app-portfolio-items></app-portfolio-items>
+    </div>
+  </div>
+</div>
