--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -10,6 +10,7 @@ $silver: #C7C7C7;
 $conifer: #b5d443;
 $christi: #73990b;
 $tahuna-sands: #e6f0c3;
+$everglade: #213d30;
 
 $picton-blue: #45C1F4;
 $boston-blue: #3192BF;
