--- a/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.html
+++ b/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.html
@@ -1,8 +1,5 @@
 <div class="row d-flex justify-content-center">
-  <div
-    *ngFor="let i of portfolioItems"
-    class="col-sm-12 col-md-6 col-lg-4 d-flex mb-5 flex-column justify-content-center"
-  >
+  <div *ngFor="let i of portfolioItems" class="col-sm-12 col-md-6 col-lg-4 d-flex mb-5 flex-column">
     <a
       [attr.data-fancybox]="'group1'"
       [attr.data-title]="i.caption"
@@ -16,13 +13,13 @@
       />
     </a>
     <div class="d-flex align-items-center justify-content-between">
-      <div class="portfolio-item__client-caption">{{ i.caption }}</div>
+      <div class="portfolio-item__client-caption mr-4">{{ i.caption }}</div>
       <a
         class="btn btn-primary"
         href="/assets/images/portfolio/{{ i.imageName }}.jpg"
         [attr.data-fancybox]="'group2'"
         [attr.data-title]="i.caption"
-        >Info</a
+        >More Info</a
       >
     </div>
   </div>
