--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,20 +1,20 @@
 @import "colors";
+@import "variables";
+@import "mixins";
 
 .btn {
-  border-radius: 0.2rem;
-  border: none;
-  cursor: pointer;
-  font-size: 1.5rem;
+  text-decoration: none;
+  border: 0;
+  @include trajanProFont;
 }
 
 .btn-primary {
-  color: $white;
-  padding: 0.9rem 3.0rem;
-}
+  text-shadow: 0.1rem 0.1rem 0 $white;
+  color: $everglade;
+  background: $secondary-color;
 
-.btn-secondary {
-  background-color: $white;
-  font-size: 1.4rem;
-  font-weight: 400;
-  padding: 0.8rem 1.5rem;
+  &:hover {
+    background: $tertiary-color;
+    text-shadow: 0.1rem 0.1rem 0 $primary-color;
+  }
 }
