--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -20,5 +20,5 @@
 @mixin bannerBg() {
   background: url('~src/assets/images/banner/banner-bg-top.png') top repeat-x,
               url('~src/assets/images/banner/banner-bg-bottom.png') bottom repeat-x,
-              $mine-shaft;
+              $primary-color;
 }
