--- a/src/app/features/home/components/featured-work/featured-work.component.scss
+++ b/src/app/features/home/components/featured-work/featured-work.component.scss
@@ -1,5 +1,5 @@
-@import '~src/styles/colors';
-@import '~src/styles/variables';
+@import '_colors';
+@import '_variables';
 
 .featured-work {
   margin: 10rem 0;
