--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,5 +1,5 @@
-@import '~src/styles/variables';
-@import '~src/styles/mixins';
+@import '_variables';
+@import '_mixins';
 
 .footer__nav-bg {
   padding: 6rem 0 2rem;
