--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,5 +1,5 @@
-@import '~src/styles/variables';
-@import '~src/styles/mixins';
+@import '_variables';
+@import '_mixins';
 
 .header__social-link {
   font-size: 1.4rem;
