--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,16 +1,16 @@
 @font-face {
   font-family: 'trajan-pro';
-  src: url('~src/assets/fonts/trajan-pro/trajan-pro.eot');
+  src: url('src/assets/fonts/trajan-pro/trajan-pro.eot');
   src: local(trajan-pro),
-    url('~src/assets/fonts/trajan-pro/trajan-pro.woff') format('woff'),
-    url('~src/assets/fonts/trajan-pro/trajan-pro.ttf') format('truetype'),
-    url('~src/assets/fonts/trajan-pro/trajan-pro.svg') format('svg');
+    url('src/assets/fonts/trajan-pro/trajan-pro.woff') format('woff'),
+    url('src/assets/fonts/trajan-pro/trajan-pro.ttf') format('truetype'),
+    url('src/assets/fonts/trajan-pro/trajan-pro.svg') format('svg');
 }
 @font-face {
   font-family: 'lucida-sans';
-  src: url('~src/assets/fonts/lucida-sans/lucida-sans.eot');
+  src: url('src/assets/fonts/lucida-sans/lucida-sans.eot');
   src: local(lucida-sans),
-    url('~src/assets/fonts/lucida-sans/lucida-sans.woff') format('woff'),
-    url('~src/assets/fonts/lucida-sans/lucida-sans.ttf') format('truetype'),
-    url('~src/assets/fonts/lucida-sans/lucida-sans.svg') format('svg');
+    url('src/assets/fonts/lucida-sans/lucida-sans.woff') format('woff'),
+    url('src/assets/fonts/lucida-sans/lucida-sans.ttf') format('truetype'),
+    url('src/assets/fonts/lucida-sans/lucida-sans.svg') format('svg');
 }
