--- a/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.html
+++ b/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.html
@@ -7,7 +7,7 @@
       class="portfolio-item__client-link mb-4"
     >
       <img
-        src="/assets/images/portfolio/{{ i.imageName }}-featured-thumb.jpg"
+        src="/assets/images/portfolio/{{ i.imageName }}-thumb.jpg"
         class="portfolio-item__client-img w-100"
         alt="{{ i.caption }}"
       />
