--- a/src/app/features/contact-me/pages/contact-me-page/contact-me-page.component.html
+++ b/src/app/features/contact-me/pages/contact-me-page/contact-me-page.component.html
@@ -1,1 +1,10 @@
-<p>contact-me-page works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8">
+      <app-contact-form></app-contact-form>
+    </div>
+    <div class="col-lg-4">
+      <app-contact-details></app-contact-details>
+    </div>
+  </div>
+</div>
