styled contact details

--- a/src/app/features/contact-me/components/contact-details/contact-details.component.html
+++ b/src/app/features/contact-me/components/contact-details/contact-details.component.html
@@ -1,1 +1,40 @@
-<p>contact-details works!</p>
+<h2>
+  Contact
+  <span class="text-tertiary">Details</span>
+</h2>
+<dl class="contact-details__list d-flex flex-wrap flex-row w-100">
+  <dt class="contact-details__label">Mobile:</dt>
+  <dd class="contact-details__item"><a href="tel:07932 566 488">07932 566 488</a></dd>
+
+  <dt class="contact-details__label">Email:</dt>
+  <dd class="contact-details__item">
+    <a href="mailto:omar.creative.dev@gmail.com?subject=Creative%20Developments">omar.creative.dev@gmail.com</a>
+  </dd>
+
+  <dt class="contact-details__label">Skype:</dt>
+  <dd class="contact-details__item">
+    <a href="http://myskype.info/omar.creativedevelopments.net" target="_blank">
+      omar.creativedevelopments.net
+    </a>
+  </dd>
+
+  <dt class="contact-details__label">Twitter:</dt>
+  <dd class="contact-details__item">
+    <a href="https://twitter.com/OmarCreativeDev" target="_blank">
+      OmarCreativeDev
+    </a>
+  </dd>
+
+  <dt class="contact-details__label">Address:</dt>
+  <dd class="contact-details__item">
+    <address>20 Duke Road,<br />Barkingside,<br />IG6 1NQ,<br />London,<br />United Kingdom.</address>
+  </dd>
+</dl>
+<iframe
+  class="contact-details__map"
+  src="https://maps.google.co.uk/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=ig6+1nq&amp;aq=&amp;sll=51.523972,-0.058135&amp;sspn=0.324688,0.615921&amp;ie=UTF8&amp;hq=&amp;hnear=IG6+1NQ,+United+Kingdom&amp;t=m&amp;ll=51.620575,0.098877&amp;spn=0.170526,0.413361&amp;z=10&amp;output=embed&amp;iwloc="
+></iframe
+><a
+  href="https://maps.google.co.uk/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=ig6+1nq&amp;aq=&amp;sll=51.523972,-0.058135&amp;sspn=0.324688,0.615921&amp;ie=UTF8&amp;hq=&amp;hnear=IG6+1NQ,+United+Kingdom&amp;t=m&amp;ll=51.620575,0.098877&amp;spn=0.170526,0.413361&amp;z=10"
+  >View Larger Map</a
+>
