--- a/src/app/features/contact-me/components/contact-form/contact-form.component.html
+++ b/src/app/features/contact-me/components/contact-form/contact-form.component.html
@@ -1,1 +1,54 @@
-<p>contact-form works!</p>
+<h1>Send <span class="text-tertiary">Me</span> A <span class="text-tertiary">Message</span></h1>
+<p>
+  Please fill out the contact form below to get the ball rolling on a new project or just to say "hello".
+</p>
+
+<p>Allow up to one business day for a response depending on my current work load.</p>
+
+<form class="contact-form" (ngSubmit)="onSubmit()" [formGroup]="form" novalidate>
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input
+      type="text"
+      class="form-control"
+      id="name"
+      placeholder="Enter your name..."
+      [class.is-invalid]="form.get('name').errors && submitted"
+      [formControlName]="'name'"
+    />
+  </div>
+  <div class="form-group">
+    <label for="phone">Phone</label>
+    <input
+      type="text"
+      class="form-control"
+      id="phone"
+      placeholder="Enter your phone number..."
+      [class.is-invalid]="form.get('phone').errors && submitted"
+      [formControlName]="'phone'"
+    />
+  </div>
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input
+      type="text"
+      class="form-control"
+      id="email"
+      placeholder="Enter your email..."
+      [class.is-invalid]="form.get('email').errors && submitted"
+      [formControlName]="'email'"
+    />
+  </div>
+  <div class="form-group">
+    <label for="message">Message</label>
+    <input
+      type="text"
+      class="form-control"
+      id="message"
+      placeholder="Enter your message..."
+      [class.is-invalid]="form.get('message').errors && submitted"
+      [formControlName]="'message'"
+    />
+  </div>
+  <button class="btn btn-primary mt-5 mb-5" type="submit">Submit</button>
+</form>
