--- a/src/app/features/contact-me/components/contact-form/contact-form.component.html
+++ b/src/app/features/contact-me/components/contact-form/contact-form.component.html
@@ -1,12 +1,11 @@
 <h1>Send <span class="text-tertiary">Me</span> A <span class="text-tertiary">Message</span></h1>
 <p>
-  Please fill out the contact form below to get the ball rolling on a new project or just to say "hello".
+  Please fill out the contact form below to get the ball rolling on a new project or just to say "hello". Allow up to
+  one business day for a response depending on my current work load.
 </p>
 
-<p>Allow up to one business day for a response depending on my current work load.</p>
-
 <form class="contact-form" (ngSubmit)="onSubmit()" [formGroup]="form" novalidate>
-  <div class="form-group">
+  <div class="form-group mb-4">
     <label for="name">Name</label>
     <input
       type="text"
@@ -17,7 +16,7 @@
       [formControlName]="'name'"
     />
   </div>
-  <div class="form-group">
+  <div class="form-group mb-4">
     <label for="phone">Phone</label>
     <input
       type="text"
@@ -28,7 +27,7 @@
       [formControlName]="'phone'"
     />
   </div>
-  <div class="form-group">
+  <div class="form-group mb-4">
     <label for="email">Email</label>
     <input
       type="text"
@@ -39,16 +38,17 @@
       [formControlName]="'email'"
     />
   </div>
-  <div class="form-group">
+  <div class="form-group mb-4">
     <label for="message">Message</label>
-    <input
+    <textarea
       type="text"
       class="form-control"
       id="message"
+      rows="7"
       placeholder="Enter your message..."
       [class.is-invalid]="form.get('message').errors && submitted"
       [formControlName]="'message'"
-    />
+    ></textarea>
   </div>
-  <button class="btn btn-primary mt-5 mb-5" type="submit">Submit</button>
+  <button class="btn btn-primary mt-4 mb-5" type="submit">Submit</button>
 </form>
