tweaked button padding

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,3 +12,5 @@ $font-size-base: 1.6rem;
 $body-color: $primary-color;
 $link-color: $tertiary-color;
 $link-hover-color: $tertiary-color;
+$btn-padding-x: 1.5rem;
+$btn-padding-y: 0.5rem;
