--- a/src/app/features/contact-me/components/contact-form/contact-form.component.html
+++ b/src/app/features/contact-me/components/contact-form/contact-form.component.html
@@ -47,7 +47,7 @@
       {{ getFirstErrorMessage('email') }}
     </div>
   </div>
-  <div class="form-group mb-4">
+  <div class="form-group mb-5">
     <label for="message">Message</label>
     <textarea
       type="text"
@@ -62,7 +62,10 @@
       {{ getFirstErrorMessage('message') }}
     </div>
   </div>
-  <button class="btn btn-primary mt-4 mb-5 d-inline-flex align-items-center" type="submit">
+  <div *ngIf="messageSent" class="alert alert-success mt-4 mb-5" role="alert">
+    Message sent!
+  </div>
+  <button class="btn btn-primary mt-2 mb-5 d-inline-flex align-items-center" type="submit">
     <ng-container *ngIf="sendingMessage; else idle">
       <span class="spinner-border spinner-border-sm mr-2 contact-form__spinner" role="status" aria-hidden="true"></span>
       Sending
