removed thumb images and added addison lee booking to portfolio

--- a/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.html
+++ b/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.html
@@ -7,7 +7,7 @@
       class="portfolio-item__client-link mb-4"
     >
       <img
-        src="/assets/images/portfolio/{{ i.imageName }}-thumb.jpg"
+        src="/assets/images/portfolio/{{ i.imageName }}.jpg"
         class="portfolio-item__client-img w-100"
         alt="{{ i.caption }}"
       />
@@ -19,7 +19,7 @@
         href="/assets/images/portfolio/{{ i.imageName }}.jpg"
         [attr.data-fancybox]="'group2'"
         [attr.data-title]="i.caption"
-        >Details</a
+        >Info</a
       >
     </div>
   </div>
