added addison lee project to portfolio, removed extra fancybox gallery button

--- a/src/app/features/home/components/featured-work/featured-work.component.html
+++ b/src/app/features/home/components/featured-work/featured-work.component.html
@@ -18,7 +18,7 @@
             class="featured-work__client-link mb-5 mb-md-0"
           >
             <img
-              src="/assets/images/portfolio/{{ i.imageName }}-featured-thumb.jpg"
+              src="/assets/images/portfolio/{{ i.imageName }}.jpg"
               class="featured-work__client-img"
               alt="{{ i.caption }}"
             />
