--- a/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.html
+++ b/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.html
@@ -1,10 +1,10 @@
-<div class="row d-flex justify-content-center">
-  <div *ngFor="let i of portfolioItems" class="col-sm-6 col-md-4 col-lg-3 d-flex mb-5 flex-column">
+<ngx-masonry #masonryEl>
+  <div ngxMasonryItem class="masonry-item col-sm-6 col-md-4 col-lg-3 mb-5" *ngFor="let i of portfolioItems">
     <a
       [attr.data-fancybox]="'group1'"
       [attr.data-title]="i.caption"
       href="/assets/images/portfolio/{{ i.imageName }}.jpg"
-      class="portfolio-item__client-link mb-4"
+      class="portfolio-item__client-link mb-4 d-flex"
     >
       <img
         src="/assets/images/portfolio/{{ i.imageName }}.jpg"
@@ -14,4 +14,4 @@
     </a>
     <div class="portfolio-item__client-caption text-center">{{ i.caption }}</div>
   </div>
-</div>
+</ngx-masonry>
