css fix for safari

--- a/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.html
+++ b/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.html
@@ -4,7 +4,7 @@
       [attr.data-fancybox]="'group1'"
       [attr.data-title]="i.caption"
       href="/assets/images/portfolio/{{ i.imageName }}.jpg"
-      class="portfolio-item__client-link mb-4 d-flex"
+      class="portfolio-item__client-link mb-4 d-block"
     >
       <img
         src="/assets/images/portfolio/{{ i.imageName }}.jpg"
