--- a/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.html
+++ b/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.html
@@ -1,4 +1,4 @@
-<ngx-masonry #masonryEl>
+<ngx-masonry #masonryEl [class.invisible]="portFolioLoading">
   <div ngxMasonryItem class="masonry-item col-sm-6 col-md-4 col-lg-3 mb-5" *ngFor="let i of portfolioItems">
     <a
       [attr.data-fancybox]="'group1'"
