added spinner to porfolio loading

--- a/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.scss
+++ b/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.scss
@@ -14,3 +14,8 @@
 .portfolio-item__client-caption {
   @include trajanProFont();
 }
+
+.portfolio-item__spinner {
+  height: 6rem;
+  width: 6rem;
+}
