--- a/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.html
+++ b/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.html
@@ -1,3 +1,10 @@
+<span
+  *ngIf="portFolioLoading"
+  class="spinner-border spinner-border-sm portfolio-item__spinner"
+  role="status"
+  aria-hidden="true"
+></span>
+
 <ngx-masonry #masonryEl [class.invisible]="portFolioLoading">
   <div ngxMasonryItem class="masonry-item col-sm-6 col-md-4 col-lg-3 mb-5" *ngFor="let i of portfolioItems">
     <a
