--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,6 +1,6 @@
-@import "colors";
-@import "variables";
-@import "mixins";
+@import 'colors';
+@import 'variables';
+@import 'mixins';
 
 .btn {
   text-decoration: none;
