--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -5,20 +5,20 @@ $alto: #d3d3d3;
 $white: #fff;
 $mercury: #e6e6e6;
 $gallery: #ececec;
-$silver: #C7C7C7;
+$silver: #c7c7c7;
 
 $conifer: #b5d443;
 $christi: #73990b;
 $tahuna-sands: #e6f0c3;
 $everglade: #213d30;
 
-$picton-blue: #45C1F4;
-$boston-blue: #3192BF;
+$picton-blue: #45c1f4;
+$boston-blue: #3192bf;
 
 $blue-ribbon: #0e50f7;
 
 $alizarin-crimson: #e31b23;
 $radical-red: #f92f4a;
-$cinnabar: #E44D26;
-$gold: #FCD207;
+$cinnabar: #e44d26;
+$gold: #fcd207;
 $iron: #cbcfd3;
