--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -51,7 +51,7 @@ h6 {
   @include palatinoFont();
   text-transform: uppercase;
   font-size: 2.4rem;
-  margin-bottom: 4.0rem;
+  margin-bottom: 4rem;
 }
 
 .error-color {
@@ -60,21 +60,39 @@ h6 {
 .skype-color,
 .twitter-color,
 .safari-color,
-.css3-color { color: $picton-blue; }
+.css3-color {
+  color: $picton-blue;
+}
 
 .internet-explorer-color,
-.linked-in-color { color: $boston-blue; }
+.linked-in-color {
+  color: $boston-blue;
+}
 
-.bitbucket-color { color: $blue-ribbon; }
-.opera-color { color: $radical-red; }
+.bitbucket-color {
+  color: $blue-ribbon;
+}
+.opera-color {
+  color: $radical-red;
+}
 
 .firefox-color,
-.html5-color { color: $cinnabar; }
+.html5-color {
+  color: $cinnabar;
+}
 
 .chrome-color,
-.js-color { color: $gold; }
+.js-color {
+  color: $gold;
+}
 
-.android-color { color: $secondary-color; }
-.apple-color { color: $iron; }
+.android-color {
+  color: $secondary-color;
+}
+.apple-color {
+  color: $iron;
+}
 
-.text-tertiary { color: $tertiary-color; }
+.text-tertiary {
+  color: $tertiary-color;
+}
