--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,7 +7,8 @@ $secondary-color: $conifer;
 $tertiary-color: $christi;
 
 // bootstrap overrides
-$font-family-base: 'lucida-sans', lucida-sans, 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-family-base: 'lucida-sans', lucida-sans, 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue',
+  Helvetica, Arial, sans-serif;
 $font-size-base: 1.6rem;
 $body-color: $primary-color;
 $link-color: $tertiary-color;
