updated prettier config

--- a/src/app/features/my-skills/components/my-skills-summary/my-skills-summary.component.scss
+++ b/src/app/features/my-skills/components/my-skills-summary/my-skills-summary.component.scss
@@ -1,6 +1,6 @@
-@import '_colors';
-@import '_variables';
-@import '_mixins';
+@import "_colors";
+@import "_variables";
+@import "_mixins";
 
 .my-skills-summary__group {
   border: solid 0.2rem $primary-color;
