--- a/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.scss
+++ b/src/app/features/portfolio/components/portfolio-items/portfolio-items.component.scss
@@ -1,6 +1,6 @@
-@import '_colors';
-@import '_variables';
-@import '_mixins';
+@import "_colors";
+@import "_variables";
+@import "_mixins";
 
 .portfolio-item__client-link {
   border: 0.5rem solid $white;
