--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,14 +1,15 @@
-@import 'colors';
+@import "colors";
 
-$font-family-palatino: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
-$font-family-trajan: 'trajan-pro', trajan-pro, 'lucida-sans', lucida-sans, 'Lucida Grande', Garuda, sans-serif;
+$font-family-palatino: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+$font-family-trajan: "trajan-pro", trajan-pro, "lucida-sans", lucida-sans,
+  "Lucida Grande", Garuda, sans-serif;
 $primary-color: $mine-shaft;
 $secondary-color: $conifer;
 $tertiary-color: $christi;
 
 // bootstrap overrides
-$font-family-base: 'lucida-sans', lucida-sans, 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue',
-  Helvetica, Arial, sans-serif;
+$font-family-base: "lucida-sans", lucida-sans, "HelveticaNeue-Light",
+  "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-size-base: 1.6rem;
 $body-color: $primary-color;
 $link-color: $tertiary-color;
