--- a/src/app/features/home/components/featured-work/featured-work.component.scss
+++ b/src/app/features/home/components/featured-work/featured-work.component.scss
@@ -1,13 +1,16 @@
-@import '_colors';
-@import '_variables';
+@import "_colors";
+@import "_variables";
 
 .featured-work {
   margin: 10rem 0;
 }
 
 .featured-work__bg {
-  background: url('/assets/images/featured-work/featured-work-bg-top.gif') top repeat-x,
-    url('/assets/images/featured-work/featured-work-bg-bottom.gif') bottom repeat-x, $tahuna-sands;
+  background: url("/assets/images/featured-work/featured-work-bg-top.gif") top
+      repeat-x,
+    url("/assets/images/featured-work/featured-work-bg-bottom.gif") bottom
+      repeat-x,
+    $tahuna-sands;
 }
 
 .featured-work__client-link,
