--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,10 +1,10 @@
-@import 'variables';
-@import '~bootstrap/scss/bootstrap';
-@import '~@glidejs/glide/src/assets/sass/glide.core';
+@import "variables";
+@import "~bootstrap/scss/bootstrap";
+@import "~@glidejs/glide/src/assets/sass/glide.core";
 
 // common
-@import 'helpers';
-@import 'fonts';
-@import 'typography';
-@import 'forms';
-@import 'buttons';
+@import "helpers";
+@import "fonts";
+@import "typography";
+@import "forms";
+@import "buttons";
