fix deploy step

--- a/src/app/features/home/components/intro/intro.component.html
+++ b/src/app/features/home/components/intro/intro.component.html
@@ -2,7 +2,7 @@
   <h1 class="text-center">
     HI! <span class="text-tertiary">I'M OMAR</span>, & I'M A FREELANCE
     <span class="text-tertiary">FRONT END</span> WEB
-    <span class="text-tertiary">DEVELOPER</span> FOO.
+    <span class="text-tertiary">DEVELOPER</span> FOO test.
   </h1>
   <p class="text-center">
     I have <app-years-of-experience></app-years-of-experience> years solid industry experience and
