cleanup: remove travis files

--- a/src/app/features/home/components/intro/intro.component.html
+++ b/src/app/features/home/components/intro/intro.component.html
@@ -1,8 +1,7 @@
 <div class="container">
   <h1 class="text-center">
     HI! <span class="text-tertiary">I'M OMAR</span>, & I'M A FREELANCE
-    <span class="text-tertiary">FRONT END</span> WEB
-    <span class="text-tertiary">DEVELOPER</span> FOO test.
+    <span class="text-tertiary">FRONT END</span> WEB <span class="text-tertiary">DEVELOPER</span>.
   </h1>
   <p class="text-center">
     I have <app-years-of-experience></app-years-of-experience> years solid industry experience and
