--- a/src/app/features/my-skills/pages/my-skills-page/my-skills-page.component.html
+++ b/src/app/features/my-skills/pages/my-skills-page/my-skills-page.component.html
@@ -3,11 +3,11 @@
     <div class="col-lg-12">
       <h1>My <span class="text-tertiary">skills</span></h1>
       <p>
-        Welcome to my skills page, here you can see more information about my skills. Please click on a skill group for
-        more details.
+        Welcome to my skills page, here you can see more information about my skills. Please click
+        on a skill group for more details.
       </p>
 
-      <app-my-skills-summary></app-my-skills-summary>
+      <app-my-skills-summary [groups]="groups"></app-my-skills-summary>
       <app-my-skills-details></app-my-skills-details>
     </div>
   </div>
