remove skype from portfolio

--- a/src/app/features/contact-me/components/contact-details/contact-details.component.html
+++ b/src/app/features/contact-me/components/contact-details/contact-details.component.html
@@ -8,26 +8,21 @@
 
   <dt class="contact-details__label">Email:</dt>
   <dd class="contact-details__item">
-    <a href="mailto:omar.creative.dev@gmail.com?subject=Creative%20Developments">omar.creative.dev@gmail.com</a>
-  </dd>
-
-  <dt class="contact-details__label">Skype:</dt>
-  <dd class="contact-details__item">
-    <a href="http://myskype.info/omar.creativedevelopments.net" target="_blank">
-      omar.creativedevelopments.net
-    </a>
+    <a href="mailto:omar.creative.dev@gmail.com?subject=Creative%20Developments"
+      >omar.creative.dev@gmail.com</a
+    >
   </dd>
 
   <dt class="contact-details__label">Twitter:</dt>
   <dd class="contact-details__item">
-    <a href="https://twitter.com/OmarCreativeDev" target="_blank">
-      OmarCreativeDev
-    </a>
+    <a href="https://twitter.com/OmarCreativeDev" target="_blank"> OmarCreativeDev </a>
   </dd>
 
   <dt class="contact-details__label">Address:</dt>
   <dd class="contact-details__item">
-    <address>20 Duke Road,<br />Barkingside,<br />IG6 1NQ,<br />London,<br />United Kingdom.</address>
+    <address>
+      20 Duke Road,<br />Barkingside,<br />IG6 1NQ,<br />London,<br />United Kingdom.
+    </address>
   </dd>
 </dl>
 <iframe
