--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -17,7 +17,9 @@
       <div class="row">
         <div class="col-md-6 col-lg-4 pb-5">
           <dl class="footer__nav-list">
-            <dt class="footer__nav-title pb-5">Cross <span class="text-white">browser</span> support</dt>
+            <dt class="footer__nav-title pb-5">
+              Cross <span class="text-white">browser</span> support
+            </dt>
             <dd class="d-inline-flex pr-4">
               <fa-icon
                 class="d-inline-flex justify-content-center internet-explorer-color footer__icon"
@@ -25,7 +27,10 @@
               ></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4">
-              <fa-icon class="d-inline-flex justify-content-center opera-color footer__icon" [icon]="faOpera"></fa-icon>
+              <fa-icon
+                class="d-inline-flex justify-content-center opera-color footer__icon"
+                [icon]="faOpera"
+              ></fa-icon>
             </dd>
             <dd class="d-inline-flex pr-4">
               <fa-icon
@@ -49,37 +54,73 @@
         </div>
         <div class="col-md-6 col-lg-4 pb-5">
           <dl class="footer__nav-list row">
-            <dt class="footer__nav-title pb-5 col-12">Navigation <span class="text-white">Links</span></dt>
-            <dd class="col-6"><a class="footer__nav-link" [routerLink]="['/about-me']">About Me</a></dd>
-            <dd class="col-6"><a class="footer__nav-link" [routerLink]="['/my-skills']">My Skills</a></dd>
-            <dd class="col-6"><a class="footer__nav-link" [routerLink]="['/portfolio']">Portfolio</a></dd>
-            <dd class="col-6"><a class="footer__nav-link" [routerLink]="['/contact-me']">Contact Me</a></dd>
+            <dt class="footer__nav-title pb-5 col-12">
+              Navigation <span class="text-white">Links</span>
+            </dt>
+            <dd class="col-6">
+              <a class="footer__nav-link" [routerLink]="['/about-me']">About Me</a>
+            </dd>
+            <dd class="col-6">
+              <a class="footer__nav-link" [routerLink]="['/my-skills']">My Skills</a>
+            </dd>
+            <dd class="col-6">
+              <a class="footer__nav-link" [routerLink]="['/portfolio']">Portfolio</a>
+            </dd>
+            <dd class="col-6">
+              <a class="footer__nav-link" [routerLink]="['/contact-me']">Contact Me</a>
+            </dd>
           </dl>
         </div>
         <div class="col-md-6 col-lg-4 pb-5">
           <dl class="footer__nav-list row">
-            <dt class="footer__nav-title pb-5 col-12">Favourite <span class="text-white">Links</span></dt>
+            <dt class="footer__nav-title pb-5 col-12">
+              Favourite <span class="text-white">Links</span>
+            </dt>
             <dd class="col-6">
-              <a class="footer__nav-link" rel="nofollow" href="https://angular.io/" target="_blank">Angular</a>
+              <a class="footer__nav-link" rel="nofollow" href="https://angular.io/" target="_blank"
+                >Angular</a
+              >
             </dd>
             <dd class="col-6">
-              <a class="footer__nav-link" rel="nofollow" href="https://rxjs.dev/" target="_blank">RxJs</a>
+              <a class="footer__nav-link" rel="nofollow" href="https://rxjs.dev/" target="_blank"
+                >RxJs</a
+              >
             </dd>
             <dd class="col-6">
-              <a class="footer__nav-link" rel="nofollow" target="_blank" href="https://material.angular.io/">
+              <a
+                class="footer__nav-link"
+                rel="nofollow"
+                target="_blank"
+                href="https://material.angular.io/"
+              >
                 Material
               </a>
             </dd>
             <dd class="col-6">
-              <a class="footer__nav-link" rel="nofollow" target="_blank" href="https://ngxs.gitbook.io/ngxs/">
+              <a
+                class="footer__nav-link"
+                rel="nofollow"
+                target="_blank"
+                href="https://ngxs.gitbook.io/ngxs/"
+              >
                 NGXS
               </a>
             </dd>
             <dd class="col-6">
-              <a class="footer__nav-link" rel="nofollow" target="_blank" href="https://nodejs.org/en/">Node</a>
+              <a
+                class="footer__nav-link"
+                rel="nofollow"
+                target="_blank"
+                href="https://nodejs.org/en/"
+                >Node</a
+              >
             </dd>
             <dd class="col-6">
-              <a class="footer__nav-link" rel="nofollow" target="_blank" href="http://stackoverflow.com/"
+              <a
+                class="footer__nav-link"
+                rel="nofollow"
+                target="_blank"
+                href="http://stackoverflow.com/"
                 >Stack overflow</a
               >
             </dd>
@@ -94,7 +135,10 @@
               </a>
             </dd>
             <dd>
-              <a class="footer__nav-link" href="mailto:omar.creative.dev@gmail.com?subject=Creative%20Developments">
+              <a
+                class="footer__nav-link"
+                href="mailto:omar.creative.dev@gmail.com?subject=Creative%20Developments"
+              >
                 <fa-icon class="pr-3" [icon]="faEnvelope"></fa-icon>omar.creative.dev@gmail.com
               </a>
             </dd>
@@ -104,7 +148,11 @@
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Code <span class="text-white">samples</span></dt>
             <dd class="d-inline-flex pr-4">
-              <a href="https://github.com/omarCreativeDev" target="_blank" class="d-inline-flex footer__nav-link">
+              <a
+                href="https://github.com/omarCreativeDev"
+                target="_blank"
+                class="d-inline-flex footer__nav-link"
+              >
                 <fa-icon
                   class="d-inline-flex justify-content-center fa-github footer__icon"
                   [icon]="faGithub"
@@ -112,7 +160,11 @@
               </a>
             </dd>
             <dd class="d-inline-flex pr-4">
-              <a href="https://bitbucket.org/omarCreativeDev" target="_blank" class="d-inline-flex footer__nav-link">
+              <a
+                href="https://bitbucket.org/omarCreativeDev"
+                target="_blank"
+                class="d-inline-flex footer__nav-link"
+              >
                 <fa-icon
                   class="d-inline-flex justify-content-center bitbucket-color footer__icon"
                   [icon]="faBitbucket"
@@ -125,22 +177,27 @@
           <dl class="footer__nav-list">
             <dt class="footer__nav-title pb-5">Connect <span class="text-white">With</span> Me</dt>
             <dd class="d-inline-flex pr-4">
-              <a href="skype:omar.creativedevelopments.net?call" target="_blank" class="d-inline-flex footer__nav-link">
-                <fa-icon class="d-inline-flex skype-color footer__icon" [icon]="faSkype"></fa-icon>
-              </a>
-            </dd>
-            <dd class="d-inline-flex pr-4">
               <a
                 href="https://www.linkedin.com/in/omarcreativedev"
                 target="_blank"
                 class="d-inline-flex footer__nav-link"
               >
-                <fa-icon class="d-inline-flex linked-in-color footer__icon" [icon]="faLinkedinIn"></fa-icon>
+                <fa-icon
+                  class="d-inline-flex linked-in-color footer__icon"
+                  [icon]="faLinkedinIn"
+                ></fa-icon>
               </a>
             </dd>
             <dd class="d-inline-flex pr-4">
-              <a href="https://twitter.com/OmarCreativeDev" target="_blank" class="d-inline-flex footer__nav-link">
-                <fa-icon class="d-inline-flex twitter-color footer__icon" [icon]="faTwitter"></fa-icon>
+              <a
+                href="https://twitter.com/OmarCreativeDev"
+                target="_blank"
+                class="d-inline-flex footer__nav-link"
+              >
+                <fa-icon
+                  class="d-inline-flex twitter-color footer__icon"
+                  [icon]="faTwitter"
+                ></fa-icon>
               </a>
             </dd>
           </dl>
@@ -150,7 +207,9 @@
   </div>
   <div class="container py-4">
     <div class="row">
-      <div class="col-7 d-none d-lg-block">&copy; Copyright Creative Developments. All rights reserved.</div>
+      <div class="col-7 d-none d-lg-block">
+        &copy; Copyright Creative Developments. All rights reserved.
+      </div>
       <div class="col-lg-5 col-sm-12 text-right">
         <a class="footer__logo text-tertiary no-underline" href="/"
           >Creative <span class="text-body">Developments</span>.net</a
