--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -3,25 +3,20 @@
     <div class="row">
       <div class="col-sm-12 col-md-8">
         <a
-          href="skype:omar.creativedevelopments.net?call"
-          target="_blank"
-          class="header__social-link text-body pr-5 d-inline-flex align-items-center no-underline"
-        >
-          <fa-icon class="pr-3 skype-color header__social-icon" [icon]="faSkype"></fa-icon>Skype
-        </a>
-        <a
           href="https://www.linkedin.com/in/omarcreativedev"
           target="_blank"
           class="header__social-link text-body pr-5 d-inline-flex align-items-center no-underline"
         >
-          <fa-icon class="pr-3 linked-in-color header__social-icon" [icon]="faLinkedinIn"></fa-icon>LinkedIn
+          <fa-icon class="pr-3 linked-in-color header__social-icon" [icon]="faLinkedinIn"></fa-icon
+          >LinkedIn
         </a>
         <a
           href="https://twitter.com/OmarCreativeDev"
           target="_blank"
           class="header__social-link text-body d-inline-flex align-items-center no-underline"
         >
-          <fa-icon class="pr-3 twitter-color header__social-icon" [icon]="faTwitter"></fa-icon>Twitter
+          <fa-icon class="pr-3 twitter-color header__social-icon" [icon]="faTwitter"></fa-icon
+          >Twitter
         </a>
       </div>
       <div class="col-md-4 text-right d-none d-md-block">
@@ -37,7 +32,8 @@
           target="_blank"
           class="header__social-link text-body d-inline-flex align-items-center no-underline"
         >
-          <fa-icon class="pr-3 header__social-icon bitbucket-color" [icon]="faBitbucket"></fa-icon>Bitbucket
+          <fa-icon class="pr-3 header__social-icon bitbucket-color" [icon]="faBitbucket"></fa-icon
+          >Bitbucket
         </a>
       </div>
     </div>
