--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,5 +1,5 @@
-@import "variables";
-@import "mixins";
+@import 'variables';
+@import 'mixins';
 
 html {
   font-size: 62.5%;
@@ -57,7 +57,7 @@ h6 {
 .error-color {
   color: $alizarin-crimson;
 }
-.skype-color,
+
 .twitter-color,
 .safari-color,
 .css3-color {
